--- a/userprofile_app/templates/userprofile_app/user_profile/user_profile_change_password.html
+++ b/userprofile_app/templates/userprofile_app/user_profile/user_profile_change_password.html
@@ -82,5 +82,15 @@
 
 
         </div>
+        {% if messages %}
+            <div class="mb-3">
+                {% for message in messages %}
+                    <div class="alert alert-{{ message.tags }}">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            </div>
+        {% endif %}
+    </div>
 
 {% endblock %}
