--- a/userprofile_app/templates/userprofile_app/user_profile/user_profile_view.html
+++ b/userprofile_app/templates/userprofile_app/user_profile/user_profile_view.html
@@ -27,12 +27,17 @@
                                 <li><span class="profile-name">تاریخ ثبت نام: </span><span
                                         class="profile-desc">{{ object.date_joined|to_shamsi }}</span>
                                 </li>
-                                <li><span class="profile-name">نام: </span><span class="profile-desc">{{ request.user.first_name }}</span></li>
-                                <li><span class="profile-name">نام خانوادگی: </span><span class="profile-desc">{{ request.user.last_name }}</span></li>
-                                <li><span class="profile-name">نام کاربری: </span><span class="profile-desc">{{ request.user.username }}</span></li>
-                                <li><span class="profile-name">ایمیل: </span><span class="profile-desc">{{ request.user.email }}</span>
+                                <li><span class="profile-name">نام: </span><span
+                                        class="profile-desc">{{ request.user.first_name }}</span></li>
+                                <li><span class="profile-name">نام خانوادگی: </span><span
+                                        class="profile-desc">{{ request.user.last_name }}</span></li>
+                                <li><span class="profile-name">نام کاربری: </span><span
+                                        class="profile-desc">{{ request.user.username }}</span></li>
+                                <li><span class="profile-name">ایمیل: </span><span
+                                        class="profile-desc">{{ request.user.email }}</span>
                                 </li>
-                                <li><span class="profile-name">شماره تلفن: </span><span class="profile-desc">{{ request.user.phone_number }}</span>
+                                <li><span class="profile-name">شماره تلفن: </span><span
+                                        class="profile-desc">{{ request.user.phone_number }}</span>
                                 </li>
                                 <li>
                                     <span class="profile-name">آدرس: </span>
@@ -48,15 +53,26 @@
                     <div class="col-lg-6">
                         <div class="media media-card align-items-center">
                             <div>
-                                <img class="mr-3" style="width: 400px; border-radius: 15px" src="{{ request.user.avatar.url }}" alt="تصویر آواتار">
+                                <img class="mr-3" style="width: 400px; border-radius: 15px"
+                                     src="{{ request.user.avatar.url }}" alt="تصویر آواتار">
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+            {% if messages %}
+                <div class="mb-3">
+                    {% for message in messages %}
+                        <div class="alert alert-{{ message.tags }}">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                </div>
+            {% endif %}
 
 
         </div>
+
     </div>
 
 {% endblock %}
